pd/nw/css/common.css
/* various SVG modifiable colors */
:root {
  --bg_large_grid: #bbb;
  --bg_small_grid: #ddd;
  --default_array_fill: black;
  --default_array_outline: black;
}

/* hlkwok@vt.edu 2022-10-28: K12 buttons style */
.k12_tab {
    width: 140px;
    position: relative;
    left: 5px;
}

.k12_buttons {
    width: 140px;
    position: relative;
    left: 5px;
/* ico@vt.edu animate individual k12 tabs */
    transition: max-height 0.25s ease-in;
}

.k12_tab button:hover, .trapezoid button:hover {
    opacity: 0.65;
}

.k12_tab_button {
    background-color: inherit;
    border: 0px solid;
    padding: 5px;
    width: 140px;
    text-align: left;
    font-size: 14px;
}

.k12_object {
    background-color: inherit;
    border: none;
    position: relative;
    left: -5px;
    top: 2px;
    padding: 0px;
    width: 24px;
}

.k12_icon {
    width: 29px;
    height: 29px;
}

/* hlkwok@vt.edu 2022-11-8: K12 scrollbar */

#tab_menu::-webkit-scrollbar {
    width: 4px;
}

#tab_menu::-webkit-scrollbar-track {
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
}

#tab_menu::-webkit-scrollbar-thumb {
    -webkit-border-radius: 10px;
    border-radius: 10px;
    background: rgba(180,180,180,0.8);
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
}

/* hlkwok@vt.edu 2022-11-13: K12 menu toggle button */
.trapezoid {
   border-left: 20px solid rgba(220, 220, 220, 0.95);
   border-top: 5px solid transparent;
   border-bottom: 5px solid transparent;
   height: 50px;
   width: 0;
   -webkit-box-shadow: 5px 0px 10px -8px #888;
}

/* hlkwok@vt.edu 2022-11-16: K12 tab spacing */
.custom_break {
    height: 5px;
}

/* hlkwok@vt.edu 2022-11-16: Have the K12 menu elements unselectable */
.unselectable {
    -moz-user-select: -moz-none;
    -khtml-user-select: none;
    -webkit-user-select: none;
    -o-user-select: none;
    user-select: none;
}

/* singal cord for k12 mode */
.k12_mode .cord.signal {
    stroke-width: 3;
    stroke: #46d5cf;
}

/* signal inlet */
.k12_mode .xlet_signal {
    stroke: #46d5cf;
    fill: #46d5cf;
    stroke-width: 1;
}

.graph_label {
    font-weight: bold;
    filter: invert(1);
    mix-blend-mode: difference;
}

